# seotool

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.prod.yaml  compose.yaml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_phase_1_foundation.py  0002_url_discovery.py  0003_crawler_snapshots.py  0004_changes_issues.py  0005_exports.py  0006_crawl_depth.py  0007_integrations.py  (+19 more)
app/: jobs.py  main.py  maintenance.py  scheduler.py  worker.py
app/ui/: app.css  (+30 more)
docs/: architecture.md  decisions.md  deployment-synology.md  roadmap.md
scripts/: backup.sh  restore.sh
tests/: conftest.py  test_api.py  test_asset_checks.py  test_bing_backlink_import.py  test_bing_sync.py  test_change_context.py  test_change_detection.py  test_client_onboarding.py  test_config.py  test_consultant_insights.py  test_content_intent_insights.py  test_content_similarity.py  test_contextual_404.py  test_crawl_deployment.py  test_crawl_depth.py  test_database_pool.py  test_element_locations.py  test_exports.py  test_google_analytics_sync.py  test_html_extraction.py  test_http_crawler.py  test_indexation_analysis.py  test_integration_sync.py  test_internal_link_quality.py  test_issue_engine.py  test_issue_guidance.py  test_job_identifier_analysis.py  test_job_limits.py  test_job_listings_api.py  test_job_posting.py  test_oauth.py  test_orphan_pages.py  test_robots.py  test_search_console.py  test_search_insights.py  test_security.py  test_sitemap.py  test_sitemap_jobs.py  test_snapshot.py  test_structured_data_analysis.py  (+6 more)
(+86 files in other folders)
