[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-monitor"
version = "0.1.0"
description = "SEO monitoring and action platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "beautifulsoup4>=4.12,<5",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "lxml>=5.3,<7",
  "openpyxl>=3.1,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "redis>=5,<6",
  "rq>=2,<3",
  "sqlalchemy>=2.0,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=6,<7", "ruff>=0.8,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["ui/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
